additions to chap 1

--- a/chap1.tex
+++ b/chap1.tex
@@ -414,12 +414,83 @@ began, though it can't do what SC promised,'' which speaks to the
 important developments that were made in the service of DARPA's vision.\cite[afterword]{mccorduck}
 
 
-%% Classical symbol approaches (3)
 Though there are a number of approaches to AI research, different
 ideas of how machine intelligence can be achieved, it is instructive
 to look specifically at three how AI paradigms envision their project. 
 
+%% Classical symbol approaches (3)
 %%specifically w/ reference to ideologies
+The first important AI paradigm is the classical symbolic system
+approach. Associated with Allen Newell and Herb Simon, the idea of the
+physical-symbol system hypothesis is that ``symbols lie at the root of
+intelligent action''\cite[p. 109]{newellsimon}. Therefore not only
+does intelligence require symbolic manipulation, it may indeed be
+coextensive with physical-symbol systems, in other words a
+physical-symbol system has ``necessary and sufficient means'' for
+intelligence and intelligent action.\cite[p. 111]{newellsimon} Such
+objects are symbol systems in that they contain symbols and processes
+that act upon symbols. And they are physical in that they obey
+physical laws and are realizable, in reality, through engineering.
+These symbol systems would arrive at answers through a technique known as
+heuristic search: by looking through a tree of possibilities in an
+intelligent way, we arrive at the appropriate answer.\footnote{The key
+  point of heuristic search is that such answers are approximate, but
+  arrived at quickly, rather than exact, but arrived at slowly or,
+  perhaps, never at all.} Intelligence is applied in heuristic search
+by the pruning of the tree: rather than having to apply brute force to
+search the entire space, an intelligent system applying heuristic
+search makes decisions at each node as to which branches are most
+likely to produce a good result and searches those.\cite[p.
+  124]{newellsimon} As Newell and Simon wrote what makes a problem a
+problem is ``not that a large amount of search is required for its
+solution, but that a large amount \emph{would} be required if a requisite
+level of intelligence were not applied'': the task of intelligence is
+to ``avert the ever-present threat of the explosion of
+search.''\cite[p. 125]{newellsimon} 
+
+The conceit then, of the physical-symbol system hypothesis is twofold.
+First, it assumes that
+human beings essentially operate in this manner: that we apply
+symbolic logic and heuristic search to provide for our intelligent
+actions. Second, it assumes that computers can be true physical-symbol
+systems. These two assumptions are not necessary clear. John Searle
+essentially rejects the computer as a physical-symbol system in his
+Chinese room example. Instead, the computer (room) is seen as a cheap
+imitation of such a system: a room into which strange symbols are
+passed, the appropriate responses looked up in a book,
+and then passed out again, all without anything in the room having
+access to their meaning.\cite{chineseSearle} Though meaningless
+symbols are being processed by such a contraption, his view is that no
+electronic computer ``can really manipulate symbols, nor really
+designate or interpret anything at all,''\cite{escapingBoden} This is
+a philosophical question of whether or not computers are capable of
+true intelligence, not a matter of whether or not they can
+convincingly imitate intelligence (and other philosophers of AI, such
+as Margaret Boden, do not take Searle's view on the subject). 
+
+The former point proves harder to dodge. While it may be true, as is
+fundamental to the field of AI and which even Searle holds, that
+machines can think because ``we are precisely such machines,''\cite[p.
+83]{chineseSearle} and therefore it should be possible to create
+intelligent machines, this does not guarantee that symbol systems are
+the way to achieve intelligence. While we certainly may apply logic
+and process symbols, there is good reason to think that isn't how we
+spend most of our time. Symbolic logic takes a lot of mental capacity,
+so generally, we use other sorts of shortcut processes to come to
+decisions. Pollock calls these ``quick and inflexible'' or ``Q\&I''
+models\cite[p. 120]{pollock} and Dennett refers to them as ``habitual methods'' or
+mechanical routines\cite[p. 157]{dennett} We rely on Q\&I models to do
+much of our day-to-day reasoning because it is ``very important for
+humans to be able to make rough probability judgments''\cite[p.
+  120]{pollock}, and accepting the output of such approximate models
+is not at all unreasonable in the absence of evidence for their
+inappropriateness to a situation. A logical solution may be difficult
+to arrive at in some situations. The physical-symbol system hypothesis
+is just that, a hypothesis, and, historically, the classical symbolic
+approach did not yield results as quickly as expected. This was part
+of the reason for the first AI winter, and researchers moved on to
+other approaches.
+
 
 %% Rodney Brooks (3)
 
@@ -433,6 +504,7 @@ to look specifically at three how AI paradigms envision their project.
 %% and opens the way to more information about the passengers (2 p)
 %% --see Google's patents in particular which talk about sensing things
 %% like the number of passengers (4 p)
+>>pull from my paper
 
 
 %% 2.2) machine vision
@@ -465,5 +537,5 @@ to look specifically at three how AI paradigms envision their project.
 %% a normal car! (1 p)
 %% -and of course interviews with people (Ryan Chin; Walker Smith etc.
 %% where they matter to this type of vehicle)
-
+>>pull from my paper
 
