--- a/intro.tex
+++ b/intro.tex
@@ -62,8 +62,8 @@ my starting point, I must dig deeper: putting them in the context of
 historical fields and precedents, and shining light through their gaps
 for all to see. And that is what I hope this project has become, a
 deep look into the ideologies and rhetorics of the self-driving car,
-one which not only touches upon what society might be like once these
-vehicles are common, but what different models for these vehicles
+one which hints at what society might be like once these
+vehicles are common, but moreso investigates what different models for these vehicles
 exist, and what their public face might be if different people wrote,
 and different ideas guided, their stories. Stories have power, and it
 beehoves me, on finding the stories we tell to be so deeply one-sided,
