--- a/main.bib
+++ b/main.bib
@@ -174,7 +174,7 @@
 @BOOK{shelley,
    author = "Mary Shelley",
    title = "{F}rankenstein; or, {T}he {M}odern {P}rometheus",
-   publisher = "Sever, Francis, & Co.",
+   publisher = "Sever, Francis, \& Co.",
    address = "Boston, MA",
    year = "1869",
 }
@@ -228,6 +228,7 @@
 }
 
 @TECHREPORT{dartmouthconf,
+   key = "mccarthy",
    author = "J. McCarthy, M. L. Minksy, N. Rochester, C. E. Shannon",
    title = "{A} {P}roposal for the {D}artmouth {S}ummer {R}esearch {P}roject on {A}rtificial {I}ntelligence",
    institution = "From the Norbert Wiener Papers, MC 22. Box 31: Folder 798",
@@ -246,8 +247,42 @@
    year = 1987,
 }
 
+@BOOK{philosophyBoden,
+   editor = "Margaret A. Boden",
+   booktitle = "{T}he {P}hilosophy of {A}rtificial {I]ntelligence",
+   title = "{T}he {P}hilosophy of {A}rtificial {I]ntelligence",
+   publisher = "Oxford University Press",
+   address = "Oxford, UK",
+   year = 1990,
+}
 
+@INCOLLECTION{newellsimon,
+   crossref = "philosophyBoden",
+   author = "Allen Newell and Herbert A. Simon",
+   title = "{C}omputer {S}cience as {E}mpirical {E}nquiry: {S}ymbols and {S}earch",
+   pages = "105--132",
+}
 
+@INCOLLECTION{escapingBoden,
+   crossref = "philosophyBoden",
+   author = "Margaret A. Boden",
+   title = "{E}scaping from the {C}hinese {R}oom",
+   pages = "89--104",
+}
+
+@INCOLLECTION{chineseSearle,
+   crossref = "philosophyBoden",
+   author = "John R. Searle",
+   title = "{M}inds, {B}rains, and {P}rograms",
+   pages = "67--88",
+}
+
+@INCOLLECTION{dennett,
+   crossref = "philosophyBoden",
+   author = "Daniel C. Dennett",
+   title = "{C}ognitive {W}heels: {T}he {F}rame {P}roblem of {AI}",
+   pages = "147--170",
+}
 
 
 
