--- a/main.bib
+++ b/main.bib
@@ -236,15 +236,27 @@
    month = "August 31",
 }
 
-@INCOLLECTION{winston,
-   author = "Patrick H. Winston",
-   title = "{A}rtificial {I}ntelligence: {A} {P}erspective",
+@BOOK{grimsonpatil,
    editor = "W. Eric L. Grimson and Ramesh S. Patil",
    booktitle = "{AI} in the 1980s and {B]eyond",
-   pages = "1--10",
+   title = "{AI} in the 1980s and {B]eyond",
    publisher = "MIT Press",
    address = "Cambridge, MA",
    year = 1987,
+}
+
+@INCOLLECTION{winston,
+   crossref = "grimsonpatil",
+   author = "Patrick H. Winston",
+   title = "{A}rtificial {I}ntelligence: {A} {P}erspective",
+   pages = "1--10",
+}
+
+@INCOLLECTION{mobilebrooks,
+   crossref = "grimsonpatil",
+   author = "Rodney A. Brooks",
+   title = "{A}utonomous {M}obile {R}obots",
+   pages = "343--362",
 }
 
 @BOOK{philosophyBoden,
@@ -284,8 +296,29 @@
    pages = "147--170",
 }
 
+@BOOK{pollock,
+   author = "John L. Pollock",
+   title = "{H}ow to {B}uild a {P}erson: {A} {P}rolegomenon",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "1989",
+}
 
+@BOOK{ekbia,
+   author = "Hamid R. Ekbia",
+   title = "{A}rtificial {D}reams: {T}he {Q}uest for {N}on-{B}iological {I}ntelligence",
+   publisher = "Cambridge University Press",
+   address = "Cambridge, UK",
+   year = "2008",
+}
 
+@BOOK{brooksflesh,
+   author = "Rodney A. Brooks",
+   title = "{F}lesh and {M}achines: {H}ow {R}obots {W}ill {C}hange {U}s",
+   publisher = "Pantheon Books",
+   address = "New York",
+   year = "2002",
+}
 
 
 
